--- a/flowchart.css
+++ b/flowchart.css
@@ -3,14 +3,25 @@
     height: 100%;
 }
 .Flowchart-svg {
-    width: 100%;
-    height: 100%;
+    border: 1px solid gray;
 }
 
-.Flowchart-node {
-    stroke-width: 1px;
+.Node-figure {
+    stroke-width: 0.3px;
     stroke: #000000;
     fill: #ffffff;
+}
+.Node-text {
+    user-select: none;
+    font-size: 4px;
+}
+.Node-connection {
+    stroke-width: 0.2px;
+    stroke: #000000;
+    fill: #ffffff;
+}
+.Node-connection:hover {
+    cursor: pointer;
 }
 
 .Node-captured {
